BonusTwoCheckOutput.txt
********
Output From Junit Tests
*********
> Task :compileJava
> Task :processResources NO-SOURCE
> Task :classes

> Task :compileTestJava FAILED
2 actionable tasks: 2 executed
********
Errors From Junit Tests
*********
/home/judi/autograder/temp/ssheik08/src/test/java/mancala/PlayerTest.java:41: error: constructor Player in class Player cannot be applied to given types;
        Player player2 = new Player("Alice");
                         ^
  required: no arguments
  found:    String
  reason: actual and formal argument lists differ in length
/home/judi/autograder/temp/ssheik08/src/test/java/mancala/MancalaGameTest.java:21: error: cannot find symbol
        Method[] methods = MancalaGame.class.getDeclaredMethods();
                           ^
  symbol:   class MancalaGame
  location: class MancalaGameTest
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 756ms
